--- a/src/components/css/wheel.css
+++ b/src/components/css/wheel.css
@@ -1,37 +1,47 @@
 .roulette-container {
   text-align: center;
-  margin-top: 50px;
-}
-
-.roulette-wheel {
-  position: relative;
-  width: 300px;
-  height: 300px;
-  border-radius: 50%;
-  background-color: #f1f1f1;
-  overflow: hidden;
-  transition: transform 3s ease-out;
-}
-
-.field {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  clip-path: polygon(50% 50%, 100% 0%, 100% 100%);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 16px;
-}
-
-button {
   margin-top: 20px;
-  padding: 10px;
-  font-size: 16px;
-  cursor: pointer;
 }
 
-button:disabled {
-  background-color: #95a5a6;
-  cursor: not-allowed;
+.wheel {
+  margin-top: 20px;
+}
+
+input {
+  margin-bottom: 10px;
+}
+
+svg {
+  border: 1px solid #ccc;
+  border-radius: 50%;
+}
+
+rect {
+  stroke: blue;
+  stroke-width: 2;
+}
+
+p {
+  font-weight: bold;
+  margin-top: 10px;
+}
+
+/* Add additional styles as needed */
+
+
+
+
+/* Ajoutez cette classe dans votre fichier CSS */
+.highlighted-section {
+  filter: brightness(1.5); /* Par exemple, augmentez la luminosité pour mettre en évidence */
+}
+
+
+
+
+.triangle-container {
+  position: relative;
+  width: 200px; /* Ajustez la largeur selon vos besoins */
+  height: 200px; /* Ajustez la hauteur selon vos besoins */
+  margin-top: -200px; /* Ajustez la marge pour positionner le triangle au-dessus */
 }
